<resources>
    <string name="app_name">BillsPlease</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_number_of_pax">Enter number of pax</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="enter_discount">Enter discount</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="each_pays">Each pays: $</string>
    <string name="total_cost">Total Cost: $</string>
</resources>